--- a/browser/static/public/css/client.css
+++ b/browser/static/public/css/client.css
@@ -1531,17 +1531,133 @@ input:focus,button:focus,textarea:focus {
     color: #cfcfcf !important;
     background-color:rgb(249, 250, 186)  !important;
 }
+.dark .jqx-tabs-selection-tracker-bottom-metrodark,
+.dark .jqx-tabs-selection-tracker-top-metrodark,
+.dark .jqx-tabs-title-selected-bottom-metrodark,
+.dark .jqx-tabs-title-selected-top-metrodark {
+    color: #fff;
+    background: #556b2f9e;
+}
 
 .content-wrapper .yellowbutton:hover {
     background-image: linear-gradient( rgb(255, 246, 116)  0%, rgb(128, 121, 28)  100%) !important;
 }
 
-.content-wrapper .toggled {
+.voicetoolbar button {
+    float: left;
+    color: white;
+    background-color: #16270d;
+    opacity: 0.7;
+    outline: none;
+    border: 0;
+}
+.light .voicetoolbar button {
+    color: rgb(54, 126, 174) !important;
+    background-color: #1e8bd3;
+    border: 1px solid rgb(90, 90, 90);
+}
+.voicetoolbar .disconnect {
+    opacity: .8;
+    float: right;
+}
+.rooms > span {
+    margin: 1px;
+    padding: 2px;
+    padding-left: 5px;
+    padding-right: 5px;
+    border: 1px solid rgba(128, 128, 128, 0.435);
+    border-radius: 3px;
+    background-color: #161616;
+    color:#cecece;
+    display: inline-block;
+    width: 75px;
+    text-align: center;
+}
+.light .rooms > span {
+    background-color: #bfc8d4;
+    color:#2e2e2e;
+}
+.rooms .utenti {
+    opacity: 0.6;
+    margin-left: 5px;
+    margin-right: 3px;
+}
+.user button {
+    background: transparent;
+    border: none;
+    border: none;
+    padding: 0;
+    margin: 2px;
+}
+.light .user button {
+    background: #474747;
+}
+.user {
+    border-color: gray;
+    border-width: 1px;
+    border-radius: 3px;
+    background-color: #313131;
+    margin: 1px;
+    padding: 2px;
+    padding-left: 5px;
+    margin-left: 3px;
+}
+.light .user {
+    border-color: rgb(70, 70, 70);
+    background-color: rgb(209, 209, 209);
+}
+.rooms a {
+    color: rgb(54, 126, 174)
+}
+.light .rooms span.toggled {
+    background-color: rgb(54, 126, 174) !important;
+    color:white;
+}
+.gray-emoji {
+     filter: grayscale(100%) brightness(0.3) invert(1);
+     color: black;
+}
+.light .rooms span.toggled a {
+    color:white;
+}
+.dark .rooms span.toggled {
+    background-color: rgb(32, 60, 32);
+    color:#eeeeee;
+}
+.content-wrapper .toggled {   
     background-color: rgb(60, 60, 60, 0.5) !important;
     text-decoration: underline;
     color: rgb(238, 255, 0) !important;
     box-shadow: 0px 0px 2px 2px rgba(127, 127, 127, 0.4), 
                 0px 0px 2px 2px rgba(127, 127, 127, 0.4);
+}
+.voicetoolbar .toggled {
+    background-color: rgb(13 26 13) !important;
+    color: white !important;
+    opacity: 1;
+}
+
+.light .voicetoolbar .toggled {
+    background-color: rgb(54, 126, 174) !important;
+    color: white !important;
+    box-shadow: 0px 0px 1px 1px rgb(86, 149, 216), 
+                0px 0px 1px 1px rgb(86, 149, 216);
+    opacity: 1;
+}
+
+.voicetoolbar {
+    padding: 5px;
+    display: block;
+    margin-top: 3px;
+    background-color: #a2a2a29e;
+}
+.dark .voicetoolbar {
+    background-color: #556b2f9e;
+}
+.voicetoolbar .status {
+    display: inline-block;
+    margin-top: 7px;
+    margin-left: 10px;
 }
 
 .jqx-window-content button:hover {
