miglioramenti  class editor e events editor

--- a/browser/static/public/css/client.css
+++ b/browser/static/public/css/client.css
@@ -1013,6 +1013,10 @@ div:focus-visible {
     padding:5px;
 }
 
+.messageboxtext span {
+    white-space: pre;
+}
+
 .acceptbutton {
     min-width: 100px;
 }
