--- a/browser/static/public/css/client.css
+++ b/browser/static/public/css/client.css
@@ -596,6 +596,12 @@ input:disabled::placeholder {
     position:relative;
   }
 
+  .cm-s-material .CodeMirror-matchingbracket {
+    text-decoration: none;
+    background-color: green;
+    font-weight: bold;
+}
+
   .fill-parent {
     position:absolute;left:0;right:0;top:0;bottom:0;overflow:auto;
   }
