--- a/browser/static/public/css/client.css
+++ b/browser/static/public/css/client.css
@@ -1663,7 +1663,6 @@ input:focus,button:focus,textarea:focus {
 }
 .content-wrapper .toggled {   
     background-color: rgb(60, 60, 60, 0.5) !important;
-    text-decoration: underline;
     color: rgb(238, 255, 0) !important;
     box-shadow: 0px 0px 2px 2px rgba(127, 127, 127, 0.4), 
                 0px 0px 2px 2px rgba(127, 127, 127, 0.4);
@@ -1774,7 +1773,7 @@ input:focus,button:focus,textarea:focus {
     /*transition: color 300ms ease, background-color 300ms ease, opacity 300ms ease;*/
 }
 .content-wrapper button:hover {
-  background-image: linear-gradient(#a4b6e7 0%, #999999 100%) !important;
+  background-image: linear-gradient(#a5a5a5 0%, #6a6a6a 100%) !important;
   color: black !important;
   /*font-weight: bolder;*/
   /*transform: scale(1.05);*/
@@ -2462,7 +2461,19 @@ ul.select {
     outline: solid 2px #85e300 !important
 }
 
+.content-wrapper .maptoolbarbutton:hover {
+    background-image: linear-gradient(#a5a5a557 0%, #43434363 100%) !important;
+}
+.content-wrapper .maptoolbarbutton.toggled {
+    background-image: linear-gradient(#a5a5a557 0%, #43434363 100%) !important;
+    opacity: 1;
+}
+.content-wrapper .maptoolbarbutton.music {
+    opacity: 0.5;
+    margin-top: 1px !important;
+}
 .content-wrapper .maptoolbarbutton {
+    background-image: none;
     background-color: transparent !important;
     color: lightgray !important;
     border: none !important;
