bugfixes classi e courier new per macOS

--- a/browser/static/public/css/client.css
+++ b/browser/static/public/css/client.css
@@ -995,7 +995,7 @@ div:focus-visible {
 }
 
 .courier {
-    font-family: "Courier", monospace !important;
+    font-family: "Courier", "Courier New", monospace !important;
 }
 
 .consolas {
